# blend2d-python

./: .gitignore  .gitmodules  CMakeLists.txt  CRITICAL_FIX.md  FIXES_APPLIED.md  MACOS_DISABLED.md  README.md  build_wheels.sh  hud.py  pyproject.toml  setup.cfg  setup.py  setup_buildx.sh  test_wheel_build.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: build-wheels.yml
blend2d/: __init__.py
ci/: edm_driver.py
examples/: gradient.py  image.py  lines.py  pattern.py  spiral.py  text.py
src/: CMakeLists.txt  _capi.pxd  _capi.pyx  array.pxi  context.pxi  enums.pxi  font.pxi  geometry.pxi  gradient.pxi  image.pxi  path.pxi
