# Documentation for the contents of this file can be found here:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = blend2d
version = 1.0.0
description = Blend2D Python Bindings (nanobind version)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/perara/blend2d-python
author = John Wiggins, Per-Arne Andersen
author_email = per@sysx.no
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
